feat: :sparkles: add get file by id route
