# api/src/documentation/swagger.json
@@ -27,13 +27,75 @@
         }
     ],
     "paths": {
+        "/files:id": {
+            "get": {
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Get a file by id",
+                "description": "Returns a file metadata and its temporary url (expires in 1 hour) by its id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/File"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/files": {
             "post": {
                 "tags": [
                     "Files"
                 ],
                 "summary": "Upload a file",
-                "operationId": "uploadFile",
+                "description": "Upload a file and returns its metadata and temporary url (expires in 30 minutes)",
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
@@ -120,6 +182,12 @@
                     "createdAt": {
                         "type": "string",
                         "format": "date-time"
+                    },
+                    "updatedAt": {
+                        "type": "string",
+                        "format": "date-time",
+                        "description": "Only shows in get and put requests",
+                        "required": false
                     }
                 }
             },
