# api/src/dtos/file/FileDTOFactory.js
@@ -1,6 +1,7 @@
 
 const FileCreateRequestDTO = require('./FileCreateRequestDTO');
 const FileCreateResponseDTO = require('./FileCreateResponseDTO');
+const FileGetResponseDTO = require('./FileGetResponseDTO');
 
 /**
  * File DTO Factory Class
@@ -10,7 +11,13 @@ const FileCreateResponseDTO = require('./FileCreateResponseDTO');
  */
 class FileDTOFactory {
 
-	createFileRequestDTO(file, fileTypeModel) {
+	/**
+	 * Create an new file DTO to use data in creation request
+	 * @param { File } file File
+	 * @param { FileType } fileTypeModel FileType model
+	 * @returns { FileCreateRequestDTO } FileCreateRequestDTO
+	 */
+	createFileCreateRequestDTO(file, fileTypeModel) {
 
 		const { originalname, size } = file;
 		
@@ -23,18 +30,37 @@ class FileDTOFactory {
 	}
 
 	/**
-	 * Create an new file DTO to use data in response
+	 * Create an new file DTO to use data in creation response
 	 * @param { Model<File> } fileModel File model
 	 * @param { String } fileUrl File URL
-	 * @returns { FileResponseDTO } FileResponseDTO
+	 * @returns { FileCreateResponseDTO } FileResponseDTO
 	 */
-	createFileResponseDTO(fileModel, fileUrl) {
+	createFileCreateResponseDTO(fileModel, fileUrl) {
 		
 		const { name, size, externalId, key, createdAt } = fileModel;
 
 		const fileType = fileModel.fileType.name;
 
 		const createdFileResponseDTO = new FileCreateResponseDTO(name, size, fileType, externalId, key, fileUrl, createdAt);
+
+		return createdFileResponseDTO;
+	
+	}
+
+	/**
+	 * Create an new file DTO to use data in get response
+	 * 
+	 * @param { Model<File> } fileModel File model
+	 * @param { String } fileUrl File URL
+	 * @returns { FileGetResponseDTO } FileResponseDTO
+	 */
+	createFileGetResponseDTO(fileModel, fileUrl) {
+		
+		const { name, size, externalId, key, createdAt, updatedAt } = fileModel;
+
+		const fileType = fileModel.fileType.name;
+
+		const createdFileResponseDTO = new FileGetResponseDTO(name, size, fileType, externalId, key, fileUrl, createdAt, updatedAt);
 
 		return createdFileResponseDTO;
 	
